Closed Bug 43441 Opened 24 years ago Closed 24 years ago

blank right pane of preferences in new message/compose

Categories

(MailNews Core :: Composition, defect, P1)

PowerPC
Mac System 8.6
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: qaz2, Assigned: bugzilla)

Details

(Keywords: crash, platform-parity, Whiteboard: [nsbeta3+])

From Bugzilla Helper:
User-Agent: Mozilla/4.06 (Macintosh; I; PPC, Nav)
BuildID:    2000061411

When you choose Edit-Preferences from a New Message/Compose window, it will 
appear, and the left pane (where you choose which type of preferences you want 
to edit) works fine.  However, the right pane is totally blank (gray), no matter 
what you choose in the left pane.

Reproducible: Always
Steps to Reproduce:
1.Open Mozilla
2.Choose File-New-New Message
3.When the New Message window loads, choose Edit-Preferences.

Actual Results:  The Preferences dialog appears, but the right pane is 
completely blank, no matter what you choose in the left pane.

Expected Results:  Mozilla should have displayed a normal Preferences dialog.
Same with commercial build jun22.  Launch new message window from mail window
doesn't yet have access to Preferences (always disabled).  Launch new message
from browser does exhibit this problem.

QA Contact: lchiang → laurel
Appears to be available on Mac only.  Linux, NT both don't have the preferences
item available in New Message window, even when launched from browser.
Keywords: pp
Check your prefs.js in your profile and remove the line that says:

    user_pref("nglayout.widget.gfxscrollbars", false);

if it exists. (If it is there, it means you are using native scrollbars;
this is not being maintained -- see, e.g., bug 43434).

If that line exists, and by removing it you recover the prefs panel, then 
mark this as a duplicate of bug 43434. 
laurel - can you try this?  I think this may not belong to ducarroz so we may 
need to reassign pending your results.
That line is NOT in my prefs.js, and I know that I am using gfx scrollbars.

No, that line is not present in prefs.js and the problem still persists.  Now,
just to reiterate, the prefs dialog is fine when called from other windows. It's
only a problem from the new message compose when launched from the browser...
Just to be clear.
Hmmm... in jun23 commercial build you can no longer access preferences in a new
message compose window which was launched from browser. Another moving target.
nominating original bug for beta3 and adding to release notes. Is there another 
bug on the preferences not being accessible from the compose window?
Keywords: nsbeta3, relnote2
Target Milestone: --- → M18
Status: NEW → ASSIGNED
Keywords: correctness
Keywords: mail2
+ per mail triage
Whiteboard: [nsbeta3+]
FYI -- aug03 beta2 build you CAN access prefs from compose window (launched from
either browser window or mail window). If you do so, Netscape hangs, must force
quit.  Verified on nbaca's mac, too.
looks like something is wrong with the mail compose pref pane. If you set the 
focus into the message body and then select preference, it open the editor prefs 
instead of the mail compose one and in this case, the application doesn't hang.

By the way, the fact that we open the editor prefs while you are in the body 
could be a bug but I prefere to say that's a feature :-)
Whiteboard: [nsbeta3+] → [nsbeta3+] Fix in hand
Severity: minor → critical
Keywords: crash
Priority: P3 → P1
Fixed and checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: [nsbeta3+] Fix in hand → [nsbeta3+]
FYI: I know that we won't see any fixes until the 8/11 build but this is what I 
observed with the 8/10 builds:

- NT: Preferences right side is transparent
- Linux: 
Select Edit|Preferences and nothing happens the console states
  "JavaScript error: 
  chrome://communicator/content/directory/directory.js line43: window._content     
has no properties"

Select Edit|Preferences a second time and preferences appear as an icon in the 
taskbar. I can view it by maximizing. The console states
"JavaScript error:
chrome://communicator/content/pref/nsPrefWindow.js line 88: window.arguments has 
no properties"

- Mac: The application freezes.


OK using aug15 commercial m18 build, mac OS 9.0
Prefs dialog draws fine/completely when accessed from a compose window in
browser or mail window.
Status: RESOLVED → VERIFIED
removing mail2 keyword.
Keywords: mail2
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.