Fix for bug 43441 & bug 32598. Fix various problems with message compose prefs panel. R=varada